Add plot reference for the example viz to read the computed column